Fixed carousel links not working on mobile.

--- a/app/js/components/Chalkboard/Chalkboard.scss
+++ b/app/js/components/Chalkboard/Chalkboard.scss
@@ -75,6 +75,12 @@
 		}
 	}
 
+	@media(max-width: $iphone5) {
+		.background {
+			height: 217px !important;
+		}
+	}
+
 	@media(max-width: $iphone5-landscape) {
 		.background {
 			height: 257px;
